# advent-of-code-2025

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
day1/: CMakeLists.txt  day1.cpp
day2/: CMakeLists.txt  day2.cpp
day3/: CMakeLists.txt  day3.cpp
day4/: CMakeLists.txt  day4.cpp
day5/: CMakeLists.txt  day5.cpp
day6/: CMakeLists.txt  day6.cpp
day7/: CMakeLists.txt  day7.cpp
